tests/baselines/reference/arrayAssignmentTest6.errors.txt
==== tests/cases/compiler/arrayAssignmentTest6.ts (4 errors) ====
    module Test {
        interface IState {
        }
        interface IToken {
            startIndex: number;
        }
        interface ILineTokens {
            tokens: IToken[];
            endState: IState;
        }
        interface IMode {
            tokenize(line:string, state:IState, includeStates:boolean):ILineTokens;
        }
        export class Bug implements IMode {
                                    ~~~~~
!!! arrayAssignmentTest6.ts(14,33): error TS2019: Exported class 'Bug' implements private interface 'IMode'.
            public tokenize(line:string, tokens:IToken[], includeStates:boolean):ILineTokens {
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                         ~~~~~~~~~~~~~~~
!!! arrayAssignmentTest6.ts(15,38): error TS2038: Parameter 'tokens' of public method from exported class has or is using private type 'IToken'.
                                                                                 ~~~~~~~~~~~
!!! arrayAssignmentTest6.ts(15,78): error TS2056: Return type of public method from exported class has or is using private type 'ILineTokens'.
                return null;
    ~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
!!! arrayAssignmentTest6.ts(15,9): error TS2056: Return type of public method from exported class has or is using private type 'ILineTokens'.
        }    
    }
    